--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ li{
 }
 
 .light-theme{
-    --bg:var(--green);
+    --bg:var(--white);
     --fontColor:var(--black);
     --btnFontColor:var(--white);
     --btnBg:var(--black);
